# music-wave

./: CMakeLists.txt  README.MD  music-wave-3d.c  music-wave-3d.cpp  music-wave.c
cmake/: FindGLM.cmake  FindOpenGL.cmake  FindSDL2.cmake
common/: shader.cpp  shader.hpp
